--- a/css/styles.css
+++ b/css/styles.css
@@ -17,28 +17,88 @@ body {
     background-color: var(--dark);
 }
 
+header {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(241px, 1fr));
+    grid-template-rows: repeat(3, auto);
+    background-color: var(--bg-header);
+    gap: 8.5rem;
+
+    aside img {
+        cursor: pointer;
+        padding: 2rem;
+        grid-row: 1;
+    }
+
+        h1 {
+        font-family: 'Roboto', sans-serif;
+        font-size: 6.375rem;
+        color: var(--dark);
+        margin: 0 auto;
+        grid-row: 2;
+    }
+
+    .ninja-head {
+        width: 241px;
+        height: auto;
+        justify-self: center;
+        grid-row: 3;
+    }
+}
+
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    border: 1px solid white;
+    grid-template-columns: repeat(auto-fit, minmax(312px, 1fr));
+    grid-template-rows: repeat(4, 1fr);
     margin: 0 auto;
     max-width: 1100px;
+    align-items: stretch;
     gap: 1rem;
 
     .card img, .big-card img {
-        width: 250px;
+        width: 100%;
+    }
+
+    .big-card > section {
+        background-color: #fff;
+        padding: 0 1rem;
+
+        h2, p {
+            color: #000;
+        }
+    }
+
+    .card {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+        padding: 1rem;
+        gap: 1rem;
+    }
+
+    .big-card {
+        grid-column: span 1;
     }
 }
 
 button {
     background-color: var(--btn-color);
     border-style: none;
+    margin-top: auto;
+    bottom: 0;
+    font-size: 0.875rem;
+    border-radius: 4px;
+    padding: 8px 16px;
 }
 
 h2, p, button {
     color: var(--text-light);
 }
 
-h2, p, button {
+h2, p, button, a {
     font-family: 'Fira Sans', sans-serif;
 }
 
@@ -50,32 +110,14 @@ p {
     font-size: 1rem;
 }
 
-button {
-    font-size: 0.875rem;
-    border-radius: 4px;
-    padding: 8px 16px;
-}
-
-header {
+footer {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    background-color: var(--bg-header);
+    background-color: #333333;
 
-    aside img {
-        cursor: pointer;
-        padding: 1rem 1rem;
-        align-self: flex-start;
-    }
-
-    .ninja-head {
-        text-align: center;
-    }
-
-    h1 {
-        text-align: center;
-        font-family: 'Roboto', sans-serif;
-        font-size: 6.375rem;
-        color: var(--dark);
+    nav > a {
+        color: #fff;
+        text-decoration: none;
+        display: block;
     }
 }
