--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
     --dark: #000;
     --btn-color: #E83F57;
     --bg-header: #3DE07E;
+    --bg-footer:  #333;
 }
 
 body {
@@ -48,19 +49,17 @@ header {
 
 .wrapper {
     display: grid;
-    border: 1px solid white;
-    grid-template-columns: repeat(auto-fit, minmax(312px, 1fr));
-    grid-template-rows: repeat(4, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     margin: 0 auto;
     max-width: 1100px;
-    align-items: stretch;
-    gap: 1rem;
+    padding: 5rem 0;
 
     .card img, .big-card img {
         width: 100%;
     }
 
     .big-card > section {
+        height: 100%;
         background-color: #fff;
         padding: 0 1rem;
 
@@ -72,26 +71,36 @@ header {
     .card {
         display: flex;
         flex-direction: column;
-        justify-content: space-between;
-        align-items: center;
-        height: 100%;
+        grid-column: span 2;
         padding: 1rem;
-        gap: 1rem;
+        gap: 2rem;
     }
 
     .big-card {
-        grid-column: span 1;
+        grid-column: span 3;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
     }
+}
+
+.card button {
+    margin-top: 2.5rem;
+}
+
+.big-card button {
+    margin-top: 4.25rem;
+    margin-bottom: 1rem;
 }
 
 button {
     background-color: var(--btn-color);
     border-style: none;
     margin-top: auto;
-    bottom: 0;
     font-size: 0.875rem;
     border-radius: 4px;
     padding: 8px 16px;
+    align-self: flex-start;
 }
 
 h2, p, button {
@@ -104,20 +113,36 @@ h2, p, button, a {
 
 h2 {
     font-size: 3.125rem;
+    text-align: left;
 }
 
 p {
     font-size: 1rem;
 }
 
-footer {
-    display: flex;
-    flex-direction: column;
-    background-color: #333333;
+.footer-links {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    justify-content: space-around;
+    background-color: var(--bg-footer);
+    height: 20rem;
+    place-items: center;
 
-    nav > a {
-        color: #fff;
-        text-decoration: none;
-        display: block;
+    nav {
+    grid-column: 1;
+
+        a {
+            display: block;
+            color: #fff;
+            text-decoration: none;
+        }
     }
+}
+
+.footer-links article:nth-of-type(1) {
+    grid-column: 2;
+}
+
+.footer-links article:nth-of-type(2) {
+    grid-column: 3;
 }
