--- a/css/styles.css
+++ b/css/styles.css
@@ -57,10 +57,9 @@ header {
         width: 100%;
     }
 
-    .big-card > section {
+    .big-card section {
         height: 100%;
         padding: .7rem 1rem;
-        gap: 1rem;
     }
 
     .card {
@@ -75,6 +74,10 @@ header {
     .big-card {
         display: flex;
         flex-direction: column;
+    }
+
+    .big-card h2 {
+        margin-bottom: 1rem;
     }
 
     .card, .big-card section {
@@ -135,8 +138,8 @@ p {
 
     .icons {
         display: flex;
-        justify-content: space-around;
         margin-top: 1rem;
+        justify-content: space-around;
     }
 }
 
@@ -173,7 +176,11 @@ p {
     }
 
     .footer-links {
-        grid-template-columns: repeat(1, 1fr);
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .social-media {
+        grid-column: 1 / span 2;
     }
 }
 
@@ -192,7 +199,6 @@ p {
 
     .big-card {
         grid-column: auto / span 2;
-        margin: 0 2rem;
     }
 
     .big-card > section {
@@ -215,17 +221,14 @@ p {
         grid-template-columns: repeat(3, 1fr);
     }
 
-    nav {
-        grid-column: 1;
+    .footer-links h2 {
+        font-size: 1.5rem;
     }
 
-    .footer-links article:nth-of-type(1) {
-        grid-column: 2;
+    .icons {
+        gap: .5rem;
+        align-items: center;
     }
-
-    .footer-links article:nth-of-type(2) {
-        grid-column: 3;
-}
 }
 
 @media (min-width: 901px) {
@@ -239,6 +242,7 @@ p {
 
     .card {
         grid-column: auto / span 2;
+        padding: 0 .5rem;
     }
 
     .big-card {
