--- a/css/styles.css
+++ b/css/styles.css
@@ -19,9 +19,8 @@ body {
 }
 
 header {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: repeat(3, 1fr);
+    display: flex;
+    flex-direction: column;
     background-color: var(--bg-header);
     gap: 8.5rem;
 
@@ -43,6 +42,7 @@ header {
         height: auto;
         justify-self: center;
         grid-row: 3;
+        align-self: center;
     }
 }
 
@@ -156,6 +156,7 @@ p {
     .button {
         width: 100%;
         padding: 1.5rem 0;
+        font-size: 1.3rem;
     }
 
     .big-card h2, p {
@@ -165,6 +166,12 @@ p {
     .card, .big-card {
         grid-column: auto / span 1;
 
+    }
+
+    .footer-links p, .footer-links a {
+        font-size: 1.3rem;
+        margin: 10px 0;
+        padding: 5px;
     }
 
     .big-card > section {
@@ -177,12 +184,11 @@ p {
     }
 
     .footer-links {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 1fr;
+        gap: 2rem;
     }
 
-    .social-media {
-        grid-column: 1 / span 2;
-    }
+
 }
 
 @media (min-width: 601px) and (max-width: 900px) {
@@ -200,6 +206,7 @@ p {
 
     .big-card {
         grid-column: auto / span 2;
+        margin: 0 2rem;
     }
 
     .big-card > section {
